[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "server"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "client_async"
path = "src/bin/client.rs"

[[bin]]
name = "server_async"
path = "src/bin/server.rs"

[dependencies]
tokio = {version ="1", features = ["full"]}